@@ -51,6 +51,9 @@ Cacti CHANGELOG
 -issue#1690: Report a warning if the default collation is not utf8mb4_unicode_ci
 -issue#1700: Mail sent without auth causes errors to appear in logs
 -issue#1710: RRDtool create command causes first update to fail
+-issue#1716: New Installation incorrectly reports log unwritable bug
+-issue#1718: auth_changepassword generates no such file warning
+-issue#1721: Console Side Bar not correct on first login
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
